--- a/_posts/2014-07-13-project-8.markdown
+++ b/_posts/2014-07-13-project-8.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-modal-id: 6
+modal-id: 8
 date: 2014-07-15
-img: trinomio.png
+img: submarine.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
