--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -2,10 +2,10 @@
 layout: default
 modal-id: 3
 date: 2014-07-16
-img: circus.png
+img: buda.png
 alt: image-alt
 project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+client: Buda.com
+category: Encargado de Comunicaciones - Director Creativo
+description: Estuve a cargo de las comunicaciones de Buda.com la plataforma de intercambio de criptomonedas más grande de Latinoamérica. Escribí artículos para el blog, manejé sus redes sociales y trabajé en el SEO del sitio.
 ---
