--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: April 2014
 client: Porlaputa.com
 category: Director Creativo - Fundador
-description: Fundador y administrador de la página de humor gráfico más reconocida de Chile. Logró posicionarse entre las 25 páginas más visitadas por los chilenos en el 2010 y fue pionera en la cultura de los Memes. Hasta hoy en día sigue vigente con más de 5.000 visitas únicas al día.
+description: Fundador y administrador de la página de humor gráfico más reconocida de Chile, la cual logró posicionarse entre las 25 páginas más visitadas por los chilenos en el 2010 según Google y fue pionera en la cultura de los Memes y en la viralización de contenido. Hoy en día, sigue entreteniendo a los internautas reportando casi 5.000 visitas únicas al día.
 ---
